Prevent user def img from overflowing footer btn

--- a/src/styles/components/_footer.scss
+++ b/src/styles/components/_footer.scss
@@ -67,6 +67,7 @@ footer {
 
       .icon-btn--portrait {
         z-index: 1003;
+        overflow: hidden;
 
         .icon--portrait {
           width: 100%;
